syntax = "proto3";

package discord;

service DiscordBot {
  rpc GetGuilds (Empty) returns (BotGuildList) {}
  rpc GetChannels (ChannelRequest) returns (BotChannelList) {}
  rpc SendMessage (SendMessageRequest) returns (MessageResponse) {}
  rpc DeleteMessage (DeleteMessageRequest) returns (DeleteMessageResponse) {}
}

message Empty {}

message BotGuildList {
  repeated BotGuild guilds = 1;
}

message ChannelRequest {
  string guild_id = 1; // Snowflake
}

message BotGuild {
  string id = 1;
  string name = 2;
  int32 member_count = 3;
  string owner_id = 4;
  optional string icon = 5;
  optional string description = 6;
  string created_at = 7;
}

message BotChannel {
  string id = 1;  // Snowflake
  string name = 2;
  string type = 3;
  string typeName = 4;
  optional string topic = 5;
}

message BotChannelList {
  repeated BotChannel channels = 1;
}

message SendMessageRequest {
  string guild_id = 1;     // Snowflake
  string channel_id = 2;   // Snowflake
  string content = 3;
}

message MessageResponse {
  bool success = 1;
  string message = 2;
  string message_id = 3;
}

message DeleteMessageRequest {
  string guild_id = 1;     // Snowflake
  string channel_id = 2;   // Snowflake
  string message_id = 3;
}

message DeleteMessageResponse {
  bool success = 1;
  string message = 2;
}
